--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.12.0",
     "react-final-form": "^6.3.5",
     "react-scripts": "3.3.1",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.0.0",
+    "dfs-ui-components": "^0.1.39"
   },
   "scripts": {
     "start": "react-scripts start",
